--- a/unterwegs/templates/vega.html
+++ b/unterwegs/templates/vega.html
@@ -1,47 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/vega/assets/syntax.css">
-    <link rel="stylesheet" href="/vega/assets/main.css">
-    <script src="/vega/vega.js"></script>
+  <!-- Import Vega & Vega-Lite (does not have to be from CDN) -->
+  <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vega-lite@4"></script>
+  <!-- Import vega-embed -->
+  <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
 </head>
 <body>
-<div class="page-centered page-main">
-    <div class="example">
-        <div class="embed">
-          <div id="force-directed-layout" class="view"></div>
-          <a href="../force-directed-layout.vg.json">View Source</a>
-          <a id="force-directed-layout-png" href="#">Export PNG</a>
-          <a id="force-directed-layout-svg" href="#">Export SVG</a>
-        </div>
+<h2>{{query}}</h2>
+<div id="vis"></div>
 
-        <script>
-var spec = {{spec|tojson}};
-var view = new vega.View(vega.parse(spec), {
-  loader: vega.loader({baseURL: '/vega/'}),
-  logLevel: vega.Warn,
-  renderer: 'svg'
-}).initialize('#force-directed-layout').hover().run();
-
-function image(view, type) {
-  return function(event) {
-    event.preventDefault();
-    view.toImageURL(type).then(function(url) {
-      var link = document.createElement('a');
-      link.setAttribute('href', url);
-      link.setAttribute('target', '_blank');
-      link.setAttribute('download', 'force-directed-layout.' + type);
-      link.dispatchEvent(new MouseEvent('click'));
-    }).catch(function(error) { console.error(error); });
-  };
-}
-
-document.querySelector('#force-directed-layout-png').addEventListener('click', image(view, 'png'));
-document.querySelector('#force-directed-layout-svg').addEventListener('click', image(view, 'svg'));
-        </script>
-    </div>
-</div>
+<script type="text/javascript">
+  var spec = {{spec|tojson}};
+  vegaEmbed('#vis', spec).then(function(result) {
+      //result.view
+  }).catch(console.error);
+</script>
 </body>
 </html>
