--- a/unterwegs/templates/vega.html
+++ b/unterwegs/templates/vega.html
@@ -12,56 +12,22 @@
 </head>
 <body>
     <div class="container">
-    <h2 class="text-center">{{query}}</h2>
-    <div class="row">
-        <div id="cluster" class="col-md"></div>
-        <div id="page" class="col-md"></div>
-    </div>
-    <div class="row">
-        <div id="info" class="col-md"></div>
-        <div id="stats" class="col-md"></div>
-    </div>
+        <h2 class="text-center">{{query}}</h2>
+        <div class="row">
+            <div id="cluster" class="col"></div>
+            <div id="page" class="col"></div>
+        </div>
+        <div class="row">
+            <div id="stats" class="col"></div>
+            <div id="info" class="col"></div>
+        </div>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-    <script type="text/javascript">
-        jQuery.getMultipleJSON = function(){
-          return jQuery.when.apply(jQuery, jQuery.map(arguments, function(jsonfile){
-            return jQuery.getJSON(jsonfile);
-          })).then(function(){
-            var def = jQuery.Deferred();
-            return def.resolve.apply(def, jQuery.map(arguments, function(response){
-              return response[0];
-            }));
-          });
-        };
-
-        var viewPage = null;
-        var viewInfo = null;
-        var viewAnalysis = null;
-        var viewCluster = null;
-
-        $(function() {
-            $.getMultipleJSON("{{specPage}}", "{{specInfo}}", "{{specAnalysis}}")
-            .fail(function(jqxhr, textStatus, error){})
-            .done(function(specPage, specInfo, specAnalysis) {
-                specPage = vega.parse(specPage);
-                specInfo = vega.parse(specInfo);
-                specAnalysis = vega.parse(specAnalysis);
-
-                viewPage = new vega.View(specPage).logLevel(vega.Warn).renderer('svg').initialize('#page').hover();
-                viewInfo = new vega.View(specInfo).logLevel(vega.Warn).renderer('svg').initialize('#info').hover();
-                viewAnalysis = new vega.View(specAnalysis).logLevel(vega.Warn).renderer('svg').initialize('#stats').hover();
-                viewPage.runAsync();
-                viewInfo.runAsync();
-                viewAnalysis.runAsync();
-
-                vegaEmbed('#cluster', "{{specCluster}}").then(function(result) {
-                    viewCluster = result.view;
-                }).catch(console.error);
-            })
-        });
-    </script>
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+        <script src="/js/search.js" ></script>
+        <script type="text/javascript">
+            search("{{specPage}}", "{{specInfo}}", "{{specAnalysis}}", "{{specCluster}}");
+        </script>
     </div>
 </body>
 </html>
