--- a/unterwegs/templates/vega.html
+++ b/unterwegs/templates/vega.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <script src="https://vega.github.io/vega/vega.js"></script>
-    <!--<script src="https://cdn.jsdelivr.net/npm/vega@5"></script>-->
-    <!--<script src="https://cdn.jsdelivr.net/npm/vega-lite@4"></script>-->
+    <!--<script src="https://vega.github.io/vega/vega.js"></script>-->
+    <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vega-lite@4"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
     <title>{{query}}</title>
 </head>
@@ -14,19 +14,20 @@
     <div class="container">
         <h2 class="text-center">{{query}}</h2>
         <div class="row">
-            <div id="cluster" class="col-9"></div>
-            <div id="info" class="col-3"></div>
+            <div id="cluster" class="col-12"></div>
         </div>
         <div class="row">
-            <div id="page" class="col-9"></div>
-            <div id="stats" class="col-3"></div>
+            <div id="stats" class="col-12"></div>
+        </div>
+       <div class="row">
+            <div id="page" class="col-12"></div>
         </div>
 
         <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
         <script src="/js/search.js" ></script>
         <script type="text/javascript">
-            search("{{specPage}}", "{{specInfo}}", "{{specAnalysis}}", "{{specCluster}}");
+            search("{{specPage}}", "{{specAnalysis}}", "{{specCluster}}");
         </script>
     </div>
 </body>
