--- a/unterwegs/templates/vega.html
+++ b/unterwegs/templates/vega.html
@@ -12,15 +12,16 @@
 </head>
 <body>
     <div class="container">
-        <h2 class="text-center">{{query}}</h2>
+        <h2 class="text-center">Search: {{query}}</h2>
+
         <div class="row">
-            <div id="cluster" class="col-12"></div>
+            <div id="cluster" class="col"></div>
         </div>
         <div class="row">
-            <div id="stats" class="col-12"></div>
+            <div id="stats" class="col"></div>
         </div>
        <div class="row">
-            <div id="page" class="col-12"></div>
+            <div id="page" class="col"></div>
         </div>
 
         <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
