--- a/unterwegs/templates/vega.html
+++ b/unterwegs/templates/vega.html
@@ -24,8 +24,8 @@
         </ul>
         <div class="tab-content row">
             <div class="tab-pane fade show active col" id="result" role="tabpanel" aria-labelledby="result-tab">
-                {% for result in results %}
-                    <div class="flash">{{ result['highlights']['snippet'] }}</div>
+                {% for result in results['hits'] %}
+                    <div class="flash">{{ result['highlights'][0]['snippet'] | safe }}</div>
                 {% endfor %}
             </div>
             <div class="tab-pane fade col" id="cluzter" role="tabpanel" aria-labelledby="cluzter-tab">
