--- a/unterwegs/templates/vega.html
+++ b/unterwegs/templates/vega.html
@@ -14,16 +14,11 @@
     <div class="container">
         <h2 class="text-center">Search: {{query}}</h2>
 
-        <div class="row">
+        <div class="row text-center">
             <div class="input-group md-form form-sm form-2 pl-0 col-3">
                 <form action="/search">
                   <input class="form-control my-0 py-1 lime-border" type="text" placeholder="Search" aria-label="Search" name="q" value="{{query}}">
                 </form>
-                <div class="input-group-append">
-                    <span class="input-group-text lime lighten-2" id="basic-text1">
-                        <i class="fas fa-search text-grey" aria-hidden="true"></i>
-                    </span>
-                </div>
             </div>
         </div>
 
