--- a/unterwegs/templates/search.html
+++ b/unterwegs/templates/search.html
@@ -35,7 +35,9 @@
                 <ul>
                 {% for result in results['hits'] %}
                     <li>article: {{ result['document']['article'] | safe}}</li>
-                    <li>page: {{ result['document']['id'] | safe}}</li>
+                    {% with pid=result['document']['id'] %}
+                    <li>page: {% include "pagelink.html" %}</li>
+                    {% endwith %}
                     {% for highlight in result['highlights'] %}
                         <li>
                             <p>{{ highlight['snippet'] | safe }}</p>
