--- a/unterwegs/templates/search.html
+++ b/unterwegs/templates/search.html
@@ -34,7 +34,9 @@
             <div class="tab-pane fade show active col" id="result" role="tabpanel" aria-labelledby="result-tab">
                 <ul>
                 {% for result in results['hits'] %}
-                    <li>article: {{ result['document']['article'] | safe}}</li>
+                    {% with aid=result['document']['article'] %}
+                    <li>article: {% include "articlelink.html" %}</li>
+                    {% endwith %}
                     {% with pid=result['document']['id'] %}
                     <li>page: {% include "pagelink.html" %}</li>
                     {% endwith %}
