--- a/unterwegs/templates/article.html
+++ b/unterwegs/templates/article.html
@@ -15,7 +15,7 @@
         <h2 class="text-center">Article</h2>
         {% for pid in pids %}
         <div class="row">
-            <div id="page" class="col"><img src="/page/{{pid.decode('utf-8')}}.png" width="760px" height="1075px"></div>
+            <div id="page" class="col"><img src="/page/{{pid.decode('utf-8')}}.png" width="760px"></div>
         </div>
         {% endfor %}
         <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
