--- a/unterwegs/templates/article.html
+++ b/unterwegs/templates/article.html
@@ -8,18 +8,29 @@
     <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@4"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/galleria/1.5.7/galleria.min.js"></script>
+    <style>
+    body{ background: #000 }
+    .galleria{ width: 1024px; height: 1024px; }
+    </style>
     <title>Article</title>
 </head>
 <body>
     <div class="container">
         <h2 class="text-center">Article</h2>
+        <div class="galleria">
         {% for pid in pids %}
-        <div class="row">
-            <div id="page" class="col"><img src="/page/{{pid.decode('utf-8')}}.png" width="760px"></div>
-        </div>
+            <img src="/page/{{pid.decode('utf-8')}}.png" width="960px">
         {% endfor %}
-        <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+        </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+        <script>
+            (function() {
+                Galleria.loadTheme('https://cdnjs.cloudflare.com/ajax/libs/galleria/1.5.7/themes/classic/galleria.classic.min.js');
+                Galleria.run('.galleria');
+            }());
+        </script>
     </div>
 </body>
 </html>
