--- a/unterwegs/templates/page.html
+++ b/unterwegs/templates/page.html
@@ -15,6 +15,13 @@
         <h2 class="text-center">Page</h2>
         <a href="/article/{{aid}}">{{aid}}</a>
         <img src="/page/{{pid}}.png" width="760px">
+        <ul>
+        {% for rpid in rlist %}
+            {% with pid=rpid %}
+            <li>page: {% include "pagelink.html" %}</li>
+            {% endwith %}
+        {% endfor %}
+        </ul>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     </div>
