--- a/unterwegs/templates/page.html
+++ b/unterwegs/templates/page.html
@@ -8,22 +8,32 @@
     <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@4"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
-    <title>Page</title>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/galleria/1.5.7/galleria.min.js"></script>
+    <style>
+    body{ background: #000 }
+    .galleria{ width: 1024px; height: 1024px; }
+    </style>
+    <title>Article</title>
 </head>
 <body>
     <div class="container">
         <h2 class="text-center">Page</h2>
         <a href="/article/{{aid}}">{{aid}}</a>
-        <img src="/page/{{pid}}.png" width="760px">
-        <ul>
+        <div class="galleria">
+        <img src="/page/{{pid.decode('utf-8')}}.png" width="960px">
         {% for rpid in rlist %}
-            {% with pid=rpid %}
-            <li>page: {% include "pagelink.html" %}</li>
-            {% endwith %}
+            <img src="/page/{{rpid.decode('utf-8')}}.png" width="960px">
         {% endfor %}
-        </ul>
-        <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+        </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+        <script>
+            (function() {
+                Galleria.loadTheme('https://cdnjs.cloudflare.com/ajax/libs/galleria/1.5.7/themes/classic/galleria.classic.min.js');
+                Galleria.run('.galleria');
+            }());
+        </script>
     </div>
 </body>
 </html>
+
