--- a/unterwegs/templates/page.html
+++ b/unterwegs/templates/page.html
@@ -23,7 +23,7 @@
         <div class="galleria">
         <img src="/page/{{pid}}.png" width="960px">
         {% for rpid in rlist %}
-            <img src="/page/{{rpid}}.png" width="960px">
+            <a href="/page/{{pid}}"><img src="/page/{{rpid}}.png" width="960px"></a>
         {% endfor %}
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
