--- a/unterwegs/templates/page.html
+++ b/unterwegs/templates/page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/style/bootstrap.min.css">
     <script src="/js/jquery-3.5.1.min.js"></script>
     <script src="/js/galleria.min.js"></script>
     <style>
