--- a/unterwegs/templates/search.html
+++ b/unterwegs/templates/search.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/style/bootstrap.min.css">
     <!--<script src="/vega/vega.js"></script>-->
     <script src="/vega/vega.5.js"></script>
     <script src="/vega/vega-lite.4.js"></script>
