--- a/unterwegs/templates/search.html
+++ b/unterwegs/templates/search.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="/style/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css">
     <!--<script src="/vega/vega.js"></script>-->
     <script src="/vega/vega.5.js"></script>
     <script src="/vega/vega-lite.4.js"></script>
