--- a/unterwegs/templates/article.html
+++ b/unterwegs/templates/article.html
@@ -4,20 +4,24 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="/style/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css">
     <script src="/js/jquery-3.5.1.min.js"></script>
     <script src="/js/galleria.min.js"></script>
     <style>
     body{ background: #000 }
     .galleria{ width: 1024px; height: 1024px; }
     </style>
-    <title>Article</title>
+    <title>article</title>
 </head>
 <body>
     <div class="container">
         <h2 class="text-center">Article</h2>
         <div class="galleria">
         {% for pid in pids %}
-            <img src="/page/{{pid.decode('utf-8')}}.png" width="960px" data-title="" data-description="<a href='/page/{{pid.decode('utf-8')}}'>&#9759;</a>">
+            <img
+              src="/page/{{pid}}.png" width="960px" data-title=""
+              data-description="<a href='/article/{{aid}}'><i class='book'></i></a><a href='/page/{{pid}}'><i class='file-earmark-richtext'></i></a>"
+            >
         {% endfor %}
         </div>
         <script src="/js/bootstrap.bundle.min.js"></script>
