--- a/unterwegs/templates/page.html
+++ b/unterwegs/templates/page.html
@@ -4,13 +4,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="/style/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css">
     <script src="/js/jquery-3.5.1.min.js"></script>
     <script src="/js/galleria.min.js"></script>
     <style>
     body{ background: #000 }
     .galleria{ width: 1024px; height: 1024px; }
     </style>
-    <title>Article</title>
+    <title>page</title>
 </head>
 <body>
     <div class="container">
@@ -19,7 +20,10 @@
         <div class="galleria">
         <img src="/page/{{pid}}.png" width="960px">
         {% for rpid in rlist %}
-            <img src="/page/{{rpid}}.png" width="960px" data-title="" data-description="<a href='/page/{{rpid}}'>&#9759;</a>">
+            <img
+              src="/page/{{rpid}}.png" width="960px" data-title=""
+              data-description="<a href='/article/{{pid2aid[rpid]}}'><i class='book'></i></a><a href='/page/{{rpid}}'><i class='file-earmark-richtext'></i></a>"
+            >
         {% endfor %}
         </div>
         <script src="/js/bootstrap.bundle.min.js"></script>
