--- a/unterwegs/templates/article.html
+++ b/unterwegs/templates/article.html
@@ -10,6 +10,7 @@
     <style>
     body{ background: #000 }
     .galleria{ width: 1024px; height: 1024px; }
+    .galleria-info { height: 2em; float: right}
     </style>
     <title>article</title>
 </head>
