--- a/unterwegs/templates/article.html
+++ b/unterwegs/templates/article.html
@@ -19,8 +19,9 @@
         <div class="galleria">
         {% for pid in pids %}
             <img
-              src="/page/{{pid}}.png" width="960px" data-title=""
-              data-description="<a href='/article/{{aid}}'><i class='book'></i></a><a href='/page/{{pid}}'><i class='file-earmark-richtext'></i></a>"
+              src="/page/{{pid}}.png" width="960px"
+              data-title="<a href='/article/{{aid}}'><i class='book'></i></a><a href='/page/{{pid}}'><i class='file-earmark-richtext'></i></a>"
+              data-description="......"
             >
         {% endfor %}
         </div>
