--- a/unterwegs/templates/page.html
+++ b/unterwegs/templates/page.html
@@ -21,8 +21,9 @@
         <img src="/page/{{pid}}.png" width="960px">
         {% for rpid in rlist %}
             <img
-              src="/page/{{rpid}}.png" width="960px" data-title=""
-              data-description="<a href='/article/{{pid2aid[rpid]}}'><i class='book'></i></a><a href='/page/{{rpid}}'><i class='file-earmark-richtext'></i></a>"
+              src="/page/{{rpid}}.png" width="960px"
+              data-title="<a href='/article/{{pid2aid[rpid]}}'><i class='book'></i></a><a href='/page/{{rpid}}'><i class='file-earmark-richtext'></i></a>"
+              data-description="......"
             >
         {% endfor %}
         </div>
