--- a/unterwegs/templates/article.html
+++ b/unterwegs/templates/article.html
@@ -20,8 +20,8 @@
         {% for pid in pids %}
             <img
               src="/page/{{pid}}.png" width="960px"
-              data-title="<a href='/article/{{aid}}'><i class='book'></i></a><a href='/page/{{pid}}'><i class='file-earmark-richtext'></i></a>"
-              data-description="......"
+              data-title=""
+              data-description="<a href='/article/{{aid}}'><i class='book'></i></a><a href='/page/{{pid}}'><i class='file-earmark-richtext'></i></a>"
             >
         {% endfor %}
         </div>
