--- a/unterwegs/templates/page.html
+++ b/unterwegs/templates/page.html
@@ -22,8 +22,8 @@
         {% for rpid in rlist %}
             <img
               src="/page/{{rpid}}.png" width="960px"
-              data-title="<a href='/article/{{pid2aid[rpid]}}'><i class='book'></i></a><a href='/page/{{rpid}}'><i class='file-earmark-richtext'></i></a>"
-              data-description="......"
+              data-title=""
+              data-description="<a href='/article/{{pid2aid[rpid]}}'><i class='book'></i></a><a href='/page/{{rpid}}'><i class='file-earmark-richtext'></i></a>"
             >
         {% endfor %}
         </div>
