debug galleria-info

--- a/public/js/galleria.classic.css
+++ b/public/js/galleria.classic.css
@@ -125,7 +125,7 @@
     width: 20px;
     height: 20px;
     cursor: pointer;
-    background-color: #000;
+    background-color: #ffffff;
 }
 .galleria-theme-classic.notouch .galleria-info-link:hover {
     opacity: 1;
