--- a/public/js/galleria.classic.css
+++ b/public/js/galleria.classic.css
@@ -92,6 +92,8 @@
     margin-bottom: 7px;
 }
 .galleria-theme-classic .galleria-info-description {
+    width: 40px;
+    height: 20px;
     text-align: right;
     font: italic 12px/1.4 georgia,serif;
     margin: 0;
